--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,3 @@
 ContainerMultithreading.xcodeproj/project.xcworkspace/xcuserdata/skyshen.xcuserdatad
 ContainerMultithreading.xcodeproj/xcuserdata/skyshen.xcuserdatad
+ContainerMultithreading.xcodeproj/xcuserdata
